--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simple-keyboard@latest/build/css/index.css">
-    <!--    <link rel="stylesheet" href="lib/simple-keyboard/index.css">-->
+    <link rel="stylesheet" href="lib/simple-keyboard/index.css">
     <link rel="stylesheet" href="src/index.css"/>
 </head>
 
@@ -32,9 +31,7 @@
 </div>
 
 
-<script src="https://cdn.jsdelivr.net/npm/simple-keyboard@latest/build/index.js"></script>
-
-<!--<script src="lib/simple-keyboard/index.js"></script>-->
+<script src="lib/simple-keyboard/index.js"></script>
 <script src="src/index.js"></script>
 </body>
 
