add some parsing ability

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 </div>
 
 <div style="width:100%; text-align: center; margin-top: 50px">
-<textarea style="margin-left: auto; margin-right: auto" cols="50" rows="20" onchange="shoes(this.value)">
-</textarea>
+    <textarea style="margin-left: auto; margin-right: auto" cols="50" rows="20" onchange="shoes(this.value)"></textarea>
 </div>
 
 
 <script src="lib/simple-keyboard/index.js"></script>
+<script src="src/keys.js"></script>
 <script src="src/index.js"></script>
 </body>
 
