--- a/index.html
+++ b/index.html
@@ -10,27 +10,35 @@
 
 <input class="input"/>
 
-<div class="keyboardContainer">
-    <div class="simple-keyboard-main"></div>
+<div class="keyboard">
+    <div class="pipeLeft" data-skbtn="{pipeleft}"></div>
+    <div class="keyboardContainer">
+        <div class="simple-keyboard-main"></div>
 
-    <div class="controlArrows">
-        <div class="simple-keyboard-control"></div>
-        <div class="simple-keyboard-arrows"></div>
+        <div class="controlArrows">
+            <div class="simple-keyboard-control"></div>
+            <div class="simple-keyboard-arrows"></div>
+        </div>
+
+        <div class="numPad">
+            <div class="simple-keyboard-numpad"></div>
+            <div class="simple-keyboard-numpadEnd"></div>
+        </div>
+
     </div>
-
-    <div class="numPad">
-        <div class="simple-keyboard-numpad"></div>
-        <div class="simple-keyboard-numpadEnd"></div>
-    </div>
-
+    <div class="pipeRight" data-skbtn="{piperight}"></div>
 </div>
-
-<div style="width:100%; text-align: center; margin-top: 50px">
-    <textarea style="margin-left: auto; margin-right: auto" cols="50" rows="20" onchange="shoes(this.value)"></textarea>
+<div class="keyboard" style="width:100%; margin-top: 50px">
+    <div style="text-align: center; margin-left: auto">
+        <textarea onchange="shoes(this.value)"></textarea>
+    </div>
+    <select id="profiles" onchange="profileSelected(this)" size="3">
+    </select>
 </div>
 
 
 <script src="lib/simple-keyboard/index.js"></script>
+<script src="src/profiles.js"></script>
 <script src="src/keys.js"></script>
 <script src="src/index.js"></script>
 </body>
