--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
 
 <body>
 
-<input class="input"/>
-
 <div class="padded keyboard">
     <div class="pipeLeft" data-skbtn="{pipeleft}"></div>
     <div class="keyboardContainer">
@@ -29,7 +27,7 @@
     <div class="pipeRight" data-skbtn="{piperight}"></div>
 </div>
 
-<div class="padded" style="width:100%; margin-top: 50px">
+<div class="padded" style="width:100%;">
     <div style="text-align: center; margin-left: auto">
         <textarea onchange="shoes(this.value)"></textarea>
     </div>
