--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
 <script src="lib/selection/selection.min.js"></script>
 <script src="lib/simple-keyboard/index.js"></script>
+<script src="src/utils.js"></script>
 <script src="src/code.js"></script>
 <script src="src/profiles.js"></script>
 <script src="src/keys.js"></script>
