change color from ui

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     <div class="pipeRight" data-skbtn="{piperight}"></div>
 </div>
 
+<div class="selectors">
+    <input type="color" id="favcolor" name="favcolor" value="#ff0000" oninput="colorChanged(this)">
+</div>
+
 <div class="padded" style="width:100%;">
     <div style="text-align: center; margin-left: auto">
         <textarea onchange="shoes(this.value)"></textarea>
