--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
 </div>
 
 <div class="selectors">
-    <input type="color" id="favcolor" name="favcolor" value="#ff0000" oninput="colorChanged(this)">
+    <input type="color" id="favcolor" name="favcolor" value="#ff0000" oninput="colorChanged(this.value)">
 </div>
 
 <div class="padded" style="width:100%;">
     <div style="text-align: center; margin-left: auto">
-        <textarea onchange="shoes(this.value)"></textarea>
+        <textarea disabled onchange="shoes(this.value)"></textarea>
     </div>
-    <select id="profiles" onchange="profileSelected(this)" size="3">
-    </select>
+    <select id="profiles" onchange="profileSelected(this)" size="3"></select>
 </div>
 
 <script src="lib/selection/selection.min.js"></script>
 <script src="lib/simple-keyboard/index.js"></script>
+<script src="src/baseprofile.js"></script>
 <script src="src/utils.js"></script>
 <script src="src/code.js"></script>
 <script src="src/profiles.js"></script>
