better suggestive names

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <div class="padded" style="width:100%;">
     <div style="text-align: center; margin-left: auto">
-        <textarea disabled onchange="shoes(this.value)"></textarea>
+        <textarea disabled onchange="parseProfileText(this.value)"></textarea>
     </div>
     <select id="profiles" onchange="profileSelected(this)" size="3"></select>
 </div>
