--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="lib/simple-keyboard/index.css">
     <link rel="stylesheet" href="src/index.css"/>
+    <title>Das Keyboard Profile Generator</title>
 </head>
 
 <body>
@@ -40,11 +41,11 @@
 
 <script src="lib/selection/selection.min.js"></script>
 <script src="lib/simple-keyboard/index.js"></script>
-<script src="src/baseprofile.js"></script>
+<script src="src/profile-builder.js"></script>
 <script src="src/utils.js"></script>
-<script src="src/code.js"></script>
-<script src="src/profiles.js"></script>
-<script src="src/keys.js"></script>
+<script src="src/dnd-selection.js"></script>
+<script src="src/builtin-profiles.js"></script>
+<script src="src/key-definitions.js"></script>
 <script src="src/index.js"></script>
 </body>
 
