--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 
 <script src="lib/selection/selection.min.js"></script>
 <script src="lib/simple-keyboard/index.js"></script>
+<script src="src/setup-dependencies.js"></script>
 <script src="src/profile-builder.js"></script>
 <script src="src/utils.js"></script>
-<script src="src/dnd-selection.js"></script>
 <script src="src/builtin-profiles.js"></script>
 <script src="src/key-definitions.js"></script>
 <script src="src/index.js"></script>
